OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/knative-eventing/security.istio.io/authorizationpolicies/deny-all-by-default.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"deny-all-by-default","namespace":"knative-eventing"},"spec":{}}
  creationTimestamp: "2025-01-09T14:46:17Z"
  generation: 1
  managedFields:
  - apiVersion: security.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2025-01-09T14:46:17Z"
  name: deny-all-by-default
  namespace: knative-eventing
  resourceVersion: "43615"
  uid: f67283ab-39e8-442d-9a05-f701593b81fc
spec: {}
